Initial DT integration commit, not verified

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -237,6 +237,8 @@ build.json @home-assistant/supervisor
 /homeassistant/components/discogs/ @thibmaek
 /homeassistant/components/discovery/ @home-assistant/core
 /tests/components/discovery/ @home-assistant/core
+/homeassistant/components/disruptive_technologies/ @tjora
+/tests/components/disruptive_technologies/ @tjora
 /homeassistant/components/dlna_dmr/ @StevenLooman @chishm
 /tests/components/dlna_dmr/ @StevenLooman @chishm
 /homeassistant/components/dlna_dms/ @chishm
