--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -543,6 +543,9 @@ discogs_client==2.3.0
 # homeassistant.components.steamist
 discovery30303==0.2.1
 
+# homeassistant.components.disruptive_technologies
+disruptive==1.2.1
+
 # homeassistant.components.digitalloggers
 dlipower==0.7.165
 
